Fix extra spacing

--- a/content/assets/style/2021q1.css
+++ b/content/assets/style/2021q1.css
@@ -550,7 +550,8 @@ dd {
   margin: 0 0 20px 0;
 }
 
-blockquote > *:last-child {
+p:last-child,
+li:last-child {
   margin-bottom: 0;
 }
 
